5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1684_1101.log
== TEST (2019-04-29 12:46:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ")

r  = consumo*(0,44)
r1 = consumo*(0,65)
c  = consumo*(0,55)
c1 = consumo*(0,60)
i  = consumo*(0,55)
i1 = consumo*(0,60)

print("Entrada:", consumo, "KWh  e tipo", tipo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r  = consumo*(0,44)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:47:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ")

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:47:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)
-- OUTPUT:
Entrada: -56.0 KWh  e tipo <built-in method upper of str object at 0x7f54325417a0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:48:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:50:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:53:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R")
     print("Valor total: R$", r1)
-- ERROR:
File "XXXX", line 19
    elif(consumo >= 500 and tipo == "R")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:53:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", r1)
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:55:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", r1)
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", i)
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:57:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", r1)
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", i)
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", i1)
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", c)
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$", c1)
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.17972
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 KWh  e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:58:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", r1)
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", i)
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", i1)
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", c)
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$", c1)
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:58:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", r1)
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", i)
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", i1)
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", c)
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$", c1)
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:59:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", r)
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", r1)
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", i)
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", i1)
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", c)
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:00:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.154727
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:00:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entrada:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 KWh  e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:01:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.15595
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:01:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:03:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "kwh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.139433
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "KWh  e tipo",tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo >= 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo >= 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo >= 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.128927
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:07:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "KWh  e tipo",tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo > 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo > 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo > 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.142859
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:07:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo > 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo > 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo > 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.170964
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:", consumo, "KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo > 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo > 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo > 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:13:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:",consumo,"KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo > 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo > 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo > 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.16532
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:13:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:",consumo,"KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$", round(r, 2))
		
elif(consumo > 500 and tipo == "R"):
     print("Valor total: R$", round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$", round(i, 2))
		
elif(consumo > 1000 and tipo == "I"):
     print("Valor total: R$", round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$", round(c, 2))
		
elif(consumo > 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:15:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Digite o consumo: "))
tipo = input("tipo de consumo: ").upper()

r  = consumo*(0.44)
r1 = consumo*(0.65)
c  = consumo*(0.55)
c1 = consumo*(0.60)
i  = consumo*(0.55)
i1 = consumo*(0.60)

print("Entradas:",consumo,"KWh  e tipo", tipo)

if (consumo <= 500 and tipo == "R"):
	 print("Valor total: R$",round(r, 2))
		
elif(consumo > 500 and tipo == "R"):
     print("Valor total: R$",round(r1, 2))
		
elif(consumo <= 1000 and tipo == "I"):
     print("Valor total: R$",round(i, 2))
		
elif(consumo > 1000 and tipo == "I"):
     print("Valor total: R$",round(i1, 2))
		
elif(consumo <= 5000 and tipo == "C"):
     print("Valor total: R$",round(c, 2))
		
elif(consumo > 5000 and tipo == "C"):
     print("Valor total: R$",round(c1, 2))
		
else:
	 print("Dados invalidos")
-- EXECUTION TIME:
0.171998
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh  e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
